welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: not found: value i
if(nums(i)==1 && nums(i+1) == 2 && nums(i+2) == 3) return true;
        ^